@@ -68,19 +68,20 @@ AC_HELP_STRING([--with-ldap@<:@=DIR@:>@],[Include LDAP support @<:@default=no@:>
        if test "x$found_ldap" != "xno" ; then
 
                if test "x$enable_static" = "xyes"; then
-                       LDAP_LIBS=" -llber -lgnutls -lpthread -lsasl2 $LDAP_LIBS"
+                       LDAP_LIBS=" -lgnutls -lpthread -lsasl2 $LDAP_LIBS"
                fi
 
                LDAP_CPPFLAGS=-I$LDAP_INCDIR
-               LDAP_LDFLAGS="-L$LDAP_LIBDIR -lldap $LDAP_LIBS"
+               LDAP_LDFLAGS="-L$LDAP_LIBDIR -lldap -llber $LDAP_LIBS"
 
                found_ldap="yes"
                AC_DEFINE(HAVE_LDAP,1,[Define to 1 if LDAP should be enabled.])
 	       AC_DEFINE(LDAP_DEPRECATED, 1, [Define to 1 if LDAP depricated functions is used.])
                AC_MSG_RESULT(yes)
 
-               if test "x$enable_static" = "xyes"; then
-                       AC_CHECK_LIB(lber, main, , AC_MSG_ERROR([Not found LBER library]))
+               AC_CHECK_LIB(lber, main, , AC_MSG_ERROR([Not found LBER library]))
+	       
+	       if test "x$enable_static" = "xyes"; then
                        AC_CHECK_LIB(gnutls, main, , AC_MSG_ERROR([Not found GnuTLS library]))
                        AC_CHECK_LIB(pthread, main, , AC_MSG_ERROR([Not found Pthread library]))
                        AC_CHECK_LIB(sasl2, main, , AC_MSG_ERROR([Not found SASL2 library]))
