@@ -81,7 +81,7 @@ LogFile=/tmp/zabbix_agentd.log
 Server=127.0.0.1
 
 ### Option: Hostname
-#	Unique hostname.
+#	Unique, case sensitive hostname.
 #	Required for active checks and must match hostname as configured on the server.
 #
 # Default:
@@ -201,6 +201,15 @@ Hostname=Zabbix Server
 
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
+
+### Option: UnsafeUserParameters
+#	Allow all characters to be passed in arguments to user-defined parameters.
+#	0 - do not allow
+#	1 - allow
+#
+# Mandatory: no
+# Default:
+# UnsafeUserParameters=0
 
 ### Option: UserParameter
 #	User-defined parameter to monitor. There can be several user-defined parameters.
