@@ -65,7 +65,7 @@ LogFile=c:/zabbix_agentd.log
 Server=127.0.0.1
 
 ### Option: Hostname
-#	Unique hostname.
+#	Unique, case sensitive hostname.
 #	Required for active checks and must match hostname as configured on the server.
 #
 # Default:
@@ -183,6 +183,15 @@ Hostname=Windows Host
 # Include=c:\zabbix\zabbix_agentd\
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
+
+### Option: UnsafeUserParameters
+#	Allow all characters to be passed in arguments to user-defined parameters.
+#	0 - do not allow
+#	1 - allow
+#
+# Mandatory: no
+# Default:
+# UnsafeUserParameters=0
 
 ### Option: UserParameter
 #	User-defined parameter to monitor. There can be several user-defined parameters.
