@@ -23,7 +23,7 @@ Server=127.0.0.1
 # ServerPort=10051
 
 ### Option: Hostname
-#	Unique Proxy name. Make sure the Proxy name is known to the server!
+#	Unique, case sensitive Proxy name. Make sure the Proxy name is known to the server!
 #	System hostname is used if undefined.
 #
 # Mandatory: no
