@@ -1,6 +1,10 @@
 Changes for 1.8.2
 
  - [DEV-454] implemented screen export (Aly)
+ - [ZBX-1346] explicitly note that hostname in configuration files is case sensitive (Richlv)
+ - [ZBX-2006] added explicit dependency on "lber" library to gain better portability on upcoming Fedora "ld" changes. Thanks to Dan Horak. (Dmitry)
+ - [ZBX-1575] added UnsafeUserParameters configuration option for agents (asaveljevs)
+ - [ZBX-2108] added checking double values for "out of range" errors for the MySQL (Sasha)
  - [ZBX-2114] improvements in sql filtering of hosts and templates by nodes (Aly)
  - [ZBX-18,ZBX-1018,ZBX-1070,ZBX-1123,ZBXNEXT-96] dealing with database problems in a uniform way for all database engines (asaveljevs,Sasha)
  - [ZBX-2089] fixed computing calculated items for proxied hosts (asaveljevs,Sasha)
